--- a/index.html
+++ b/index.html
@@ -44,9 +44,32 @@
 						</ul>
 					</div>
 				</section>
-
 		</div>
 		<!-- END ba-container -->
 	</div>
+
+
+	<main>
+		<section class="ba-product">
+			<div class="ba-fuatured">
+				<h2 class="ba-fuatured-title">Featured Product</h2>
+				<p class="ba-fuatured-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+				<div class="ba-row cf">
+					<!-- BEGIN ba-col-60  -->
+					<div class="ba-col-60">
+						<a class="ba-thing" href="#">
+							<img src="">
+						</a>
+
+					</div>
+					<!-- END ba-col-60 -->
+
+				</div>
+
+			</div>
+
+		</section>
+	</main>
 </body>
 </html>
